brightsphere final backup
